--- a/fonts/geomanist/demo.html
+++ b/fonts/geomanist/demo.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="robots" content="noindex"/>
 	<title>Transfonter demo</title>
 	<link href="stylesheet.css" rel="stylesheet">
+	<link rel="canonical" href="https://asnaqsys.github.io//fonts/geomanist/demo.html" />
 	<style>
 		/*
 		http://meyerweb.com/eric/tools/css/reset/
