Avoid double slash (valid but not good practice) on "canonical" href.

--- a/fonts/geomanist/demo.html
+++ b/fonts/geomanist/demo.html
@@ -5,7 +5,7 @@
 	<meta name="robots" content="noindex"/>
 	<title>Transfonter demo</title>
 	<link href="stylesheet.css" rel="stylesheet">
-	<link rel="canonical" href="https://asnaqsys.github.io//fonts/geomanist/demo.html" />
+	<link rel="canonical" href="https://asnaqsys.github.io/fonts/geomanist/demo.html" />
 	<style>
 		/*
 		http://meyerweb.com/eric/tools/css/reset/
